--- a/requirements.txt
+++ b/requirements.txt
@@ -4,37 +4,55 @@
 #
 #    pip-compile
 #
-aiohttp==3.8.4
+aiohttp==3.8.5
     # via fsspec
 aiosignal==1.3.1
     # via aiohttp
-async-timeout==4.0.2
+async-timeout==4.0.3
     # via aiohttp
-attrs==22.2.0
+attrs==23.1.0
     # via aiohttp
-certifi==2022.12.7
+certifi==2023.7.22
     # via requests
-charset-normalizer==3.0.1
+charset-normalizer==3.3.0
     # via
     #   aiohttp
     #   requests
-frozenlist==1.3.3
+cmake==3.27.6
+    # via triton
+filelock==3.12.4
+    # via
+    #   torch
+    #   triton
+frozenlist==1.4.0
     # via
     #   aiohttp
     #   aiosignal
-fsspec[http]==2023.1.0
+fsspec[http]==2023.9.2
     # via pytorch-lightning
 idna==3.4
     # via
     #   requests
     #   yarl
-lightning-utilities==0.7.1
-    # via pytorch-lightning
+jinja2==3.1.2
+    # via torch
+lightning-utilities==0.9.0
+    # via
+    #   pytorch-lightning
+    #   torchmetrics
+lit==17.0.2
+    # via triton
+markupsafe==2.1.3
+    # via jinja2
+mpmath==1.3.0
+    # via sympy
 multidict==6.0.4
     # via
     #   aiohttp
     #   yarl
-numpy==1.24.2
+networkx==3.1
+    # via torch
+numpy==1.26.0
     # via
     #   -r requirements.in
     #   opencv-python
@@ -42,46 +60,85 @@ numpy==1.24.2
     #   scipy
     #   torchmetrics
     #   torchvision
-opencv-python==4.7.0.72
+nvidia-cublas-cu11==11.10.3.66
+    # via
+    #   nvidia-cudnn-cu11
+    #   nvidia-cusolver-cu11
+    #   torch
+nvidia-cuda-cupti-cu11==11.7.101
+    # via torch
+nvidia-cuda-nvrtc-cu11==11.7.99
+    # via torch
+nvidia-cuda-runtime-cu11==11.7.99
+    # via torch
+nvidia-cudnn-cu11==8.5.0.96
+    # via torch
+nvidia-cufft-cu11==10.9.0.58
+    # via torch
+nvidia-curand-cu11==10.2.10.91
+    # via torch
+nvidia-cusolver-cu11==11.4.0.1
+    # via torch
+nvidia-cusparse-cu11==11.7.4.91
+    # via torch
+nvidia-nccl-cu11==2.14.3
+    # via torch
+nvidia-nvtx-cu11==11.7.91
+    # via torch
+opencv-python==4.8.1.78
     # via -r requirements.in
-packaging==23.0
+packaging==23.2
     # via
     #   lightning-utilities
     #   pytorch-lightning
-    #   torchmetrics
-pillow==9.4.0
+pillow==10.0.1
     # via
     #   -r requirements.in
     #   torchvision
-pytorch-lightning==1.9.3
+pytorch-lightning==2.0.9.post0
     # via -r requirements.in
-pyyaml==6.0
+pyyaml==6.0.1
     # via pytorch-lightning
-requests==2.28.2
+requests==2.31.0
     # via
     #   fsspec
     #   torchvision
-scipy==1.10.1
+scipy==1.11.3
     # via -r requirements.in
-torch==1.13.1
+sympy==1.12
+    # via torch
+torch==2.0.1
     # via
     #   -r requirements.in
     #   pytorch-lightning
     #   torchmetrics
     #   torchvision
-torchmetrics==0.11.1
+    #   triton
+torchmetrics==1.2.0
     # via pytorch-lightning
-torchvision==0.14.1
+torchvision==0.15.2
     # via -r requirements.in
-tqdm==4.64.1
+tqdm==4.66.1
     # via pytorch-lightning
-typing-extensions==4.5.0
+triton==2.0.0
+    # via torch
+typing-extensions==4.8.0
     # via
     #   lightning-utilities
     #   pytorch-lightning
     #   torch
-    #   torchvision
-urllib3==1.26.14
+urllib3==2.0.6
     # via requests
-yarl==1.8.2
+wheel==0.41.2
+    # via
+    #   nvidia-cublas-cu11
+    #   nvidia-cuda-cupti-cu11
+    #   nvidia-cuda-runtime-cu11
+    #   nvidia-curand-cu11
+    #   nvidia-cusparse-cu11
+    #   nvidia-nvtx-cu11
+yarl==1.9.2
     # via aiohttp
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
