--- a/requirements.in
+++ b/requirements.in
@@ -1,7 +1,8 @@
+--extra-index-url https://download.pytorch.org/whl/cu116
+torch==1.13.1+cu116
+torchvision==0.14.1+cu116
+pytorch-lightning
 numpy
 scipy
-torch
-torchvision
-pytorch-lightning
 pillow
 opencv-python
