--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@
 #
 --extra-index-url https://download.pytorch.org/whl/cu116
 
-aiohttp==3.9.0
+aiohttp==3.9.1
     # via fsspec
 aiosignal==1.3.1
     # via aiohttp
@@ -14,23 +14,21 @@ async-timeout==4.0.3
     # via aiohttp
 attrs==23.1.0
     # via aiohttp
-certifi==2023.7.22
+certifi==2023.11.17
     # via requests
-charset-normalizer==3.3.0
+charset-normalizer==3.3.2
     # via requests
 frozenlist==1.4.0
     # via
     #   aiohttp
     #   aiosignal
-fsspec[http]==2023.9.2
-    # via
-    #   fsspec
-    #   pytorch-lightning
-idna==3.4
+fsspec[http]==2023.10.0
+    # via pytorch-lightning
+idna==3.6
     # via
     #   requests
     #   yarl
-lightning-utilities==0.9.0
+lightning-utilities==0.10.0
     # via
     #   pytorch-lightning
     #   torchmetrics
@@ -38,7 +36,7 @@ multidict==6.0.4
     # via
     #   aiohttp
     #   yarl
-numpy==1.26.1
+numpy==1.26.2
     # via
     #   -r requirements.in
     #   opencv-python
@@ -56,7 +54,7 @@ pillow==10.1.0
     # via
     #   -r requirements.in
     #   torchvision
-pytorch-lightning==2.1.0
+pytorch-lightning==2.1.2
     # via -r requirements.in
 pyyaml==6.0.1
     # via pytorch-lightning
@@ -64,7 +62,7 @@ requests==2.31.0
     # via
     #   fsspec
     #   torchvision
-scipy==1.11.3
+scipy==1.11.4
     # via -r requirements.in
 torch==1.13.1+cu116
     # via
@@ -84,7 +82,10 @@ typing-extensions==4.8.0
     #   pytorch-lightning
     #   torch
     #   torchvision
-urllib3==2.0.7
+urllib3==2.1.0
     # via requests
-yarl==1.9.2
+yarl==1.9.3
     # via aiohttp
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
