--- a/requirements.txt
+++ b/requirements.txt
@@ -6,39 +6,37 @@
 #
 --extra-index-url https://download.pytorch.org/whl/cu116
 
-aiohttp==3.9.2
+aiohttp==3.9.3
     # via fsspec
 aiosignal==1.3.1
     # via aiohttp
 async-timeout==4.0.3
     # via aiohttp
-attrs==23.1.0
+attrs==23.2.0
     # via aiohttp
-certifi==2023.11.17
+certifi==2024.2.2
     # via requests
 charset-normalizer==3.3.2
     # via requests
-frozenlist==1.4.0
+frozenlist==1.4.1
     # via
     #   aiohttp
     #   aiosignal
-fsspec[http]==2023.10.0
-    # via
-    #   fsspec
-    #   pytorch-lightning
+fsspec[http]==2024.2.0
+    # via pytorch-lightning
 idna==3.6
     # via
     #   requests
     #   yarl
-lightning-utilities==0.10.0
+lightning-utilities==0.10.1
     # via
     #   pytorch-lightning
     #   torchmetrics
-multidict==6.0.4
+multidict==6.0.5
     # via
     #   aiohttp
     #   yarl
-numpy==1.26.2
+numpy==1.26.4
     # via
     #   -r requirements.in
     #   opencv-python
@@ -46,25 +44,24 @@ numpy==1.26.2
     #   scipy
     #   torchmetrics
     #   torchvision
-opencv-python==4.8.1.78
+opencv-python==4.9.0.80
     # via -r requirements.in
 packaging==23.2
     # via
     #   lightning-utilities
     #   pytorch-lightning
+    #   torchmetrics
 pillow==10.2.0
     # via
     #   -r requirements.in
     #   torchvision
-pytorch-lightning==2.1.2
+pytorch-lightning==2.2.0.post0
     # via -r requirements.in
 pyyaml==6.0.1
     # via pytorch-lightning
 requests==2.31.0
-    # via
-    #   fsspec
-    #   torchvision
-scipy==1.11.4
+    # via torchvision
+scipy==1.12.0
     # via -r requirements.in
 torch==1.13.1+cu116
     # via
@@ -72,21 +69,21 @@ torch==1.13.1+cu116
     #   pytorch-lightning
     #   torchmetrics
     #   torchvision
-torchmetrics==1.2.0
+torchmetrics==1.3.1
     # via pytorch-lightning
 torchvision==0.14.1+cu116
     # via -r requirements.in
-tqdm==4.66.1
+tqdm==4.66.2
     # via pytorch-lightning
-typing-extensions==4.8.0
+typing-extensions==4.10.0
     # via
     #   lightning-utilities
     #   pytorch-lightning
     #   torch
     #   torchvision
-urllib3==2.1.0
+urllib3==2.2.1
     # via requests
-yarl==1.9.3
+yarl==1.9.4
     # via aiohttp
 
 # The following packages are considered to be unsafe in a requirements file:
