--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@
 #
 --extra-index-url https://download.pytorch.org/whl/cu116
 
-aiohttp==3.9.4
+aiohttp==3.9.5
     # via fsspec
 aiosignal==1.3.1
     # via aiohttp
@@ -22,13 +22,13 @@ frozenlist==1.4.1
     # via
     #   aiohttp
     #   aiosignal
-fsspec[http]==2024.2.0
+fsspec[http]==2024.5.0
     # via pytorch-lightning
 idna==3.7
     # via
     #   requests
     #   yarl
-lightning-utilities==0.10.1
+lightning-utilities==0.11.2
     # via
     #   pytorch-lightning
     #   torchmetrics
@@ -46,7 +46,7 @@ numpy==1.26.4
     #   torchvision
 opencv-python==4.9.0.80
     # via -r requirements.in
-packaging==23.2
+packaging==24.0
     # via
     #   lightning-utilities
     #   pytorch-lightning
@@ -55,13 +55,13 @@ pillow==10.3.0
     # via
     #   -r requirements.in
     #   torchvision
-pytorch-lightning==2.2.0.post0
+pytorch-lightning==2.2.4
     # via -r requirements.in
 pyyaml==6.0.1
     # via pytorch-lightning
 requests==2.31.0
     # via torchvision
-scipy==1.12.0
+scipy==1.13.0
     # via -r requirements.in
 torch==1.13.1+cu116
     # via
@@ -69,13 +69,13 @@ torch==1.13.1+cu116
     #   pytorch-lightning
     #   torchmetrics
     #   torchvision
-torchmetrics==1.3.1
+torchmetrics==1.4.0.post0
     # via pytorch-lightning
 torchvision==0.14.1+cu116
     # via -r requirements.in
-tqdm==4.66.3
+tqdm==4.66.4
     # via pytorch-lightning
-typing-extensions==4.10.0
+typing-extensions==4.11.0
     # via
     #   lightning-utilities
     #   pytorch-lightning
